[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/GUI/roulette.png" type="Texture" id=1]
[ext_resource path="res://scenes/comp/casino/rulet.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 68.0294

[sub_resource type="CircleShape2D" id=3]
radius = 31.0644

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1, 67.8235 )

[node name="rulet" type="Node2D"]
script = ExtResource( 2 )

[node name="rul" type="Sprite" parent="."]
rotation = 0.10472
texture = ExtResource( 1 )

[node name="red" type="Area2D" parent="rul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 237.747, 616.526 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 465.251, 465.92 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 608.862, 234.642 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 656.065, -33.7624 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 584.083, -297.684 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 418.297, -516.554 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="rul/red"]
position = Vector2( 173.982, -640.696 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -103.588, -650.737 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -366.414, -558.76 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -560.163, -364.443 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -658.556, -104.736 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -639.651, 170.797 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -518.098, 418.448 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="rul/red"]
position = Vector2( -299.229, 587.496 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="black" type="Area2D" parent="rul"]
rotation = 0.628319

[node name="CollisionShape2D" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 236.728, 617.104 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 467.041, 464.901 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 615.723, 235.487 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 658.849, -33.4466 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 584.237, -298.637 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 415.015, -514.973 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="rul/black"]
position = Vector2( 170.741, -636.818 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -105.248, -653.406 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -34.7127, 662.357 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -558.889, -360.67 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -657.987, -104.583 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D13" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -644.918, 172.96 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D14" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -518.354, 419.631 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="rul/black"]
position = Vector2( -302.166, 590.986 )
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="green" type="Area2D" parent="rul"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="rul/green"]
position = Vector2( -36.8486, 663.486 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="rul/green"]
position = Vector2( 36.9532, -662.492 )
shape = SubResource( 3 )

[node name="check" type="Area2D" parent="."]
position = Vector2( 0, -17.353 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="check"]
position = Vector2( 0, 740.177 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="check"]
position = Vector2( -9.53674e-07, 739.353 )
scale = Vector2( 0.101562, 2.10938 )
texture = ExtResource( 3 )

[connection signal="area_exited" from="rul/red" to="." method="_on_red_area_exited"]
[connection signal="area_exited" from="rul/black" to="." method="_on_black_area_exited"]
[connection signal="area_exited" from="rul/green" to="." method="_on_green_area_exited"]
